Worked on Weapon class
Worked the weapon class more. Added prefixes for the status effects.

--- a/Item Generator/Item Generator.csproj
+++ b/Item Generator/Item Generator.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Weapon.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="ItemDisplay.cs">
       <SubType>Form</SubType>
     </Compile>
