Added Item Maker class and more
Create Item Maker class, which is what will generate gear. Also added getters/setters to Item class so that other classes can access variables.

--- a/Item Generator/Item Generator.csproj
+++ b/Item Generator/Item Generator.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemMaker.cs" />
+    <Compile Include="Sword.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemDisplay.cs">
