Added armor generation
Armor is now generated. The prefixes and suffixes for most of the armor is different.

--- a/Item Generator/Item Generator.csproj
+++ b/Item Generator/Item Generator.csproj
@@ -45,11 +45,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Armor.cs" />
     <Compile Include="Axe.cs" />
     <Compile Include="Bow.cs" />
     <Compile Include="ItemMaker.cs" />
+    <Compile Include="Robe.cs" />
     <Compile Include="Staff.cs" />
+    <Compile Include="Suit.cs" />
     <Compile Include="Sword.cs" />
+    <Compile Include="Vest.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemDisplay.cs">
