Accessories now generate
Accessories now generate!
-Fixed an issue where items were not being generated properly which resulted in the same item getting generated.

--- a/Item Generator/Item Generator.csproj
+++ b/Item Generator/Item Generator.csproj
@@ -45,10 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accessory.cs" />
     <Compile Include="Armor.cs" />
     <Compile Include="Axe.cs" />
+    <Compile Include="Boots.cs" />
     <Compile Include="Bow.cs" />
     <Compile Include="ItemMaker.cs" />
+    <Compile Include="Necklace.cs" />
+    <Compile Include="Ring.cs" />
     <Compile Include="Robe.cs" />
     <Compile Include="Staff.cs" />
     <Compile Include="Suit.cs" />
